[tool.poetry]
name = "test-containers"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
license = "Unlicense"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
docker = "^7.1.0"
requests = "^2.32.3"
SQLAlchemy = "^2.0.36"
testcontainers = {extras = ["mongodb", "mssql", "postgres"], version = "^4.8.2"}
python-decouple = "^3.8"
tqdm = "^4.66.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
